# Lector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
certs/: README.md  generate.sh
crates/lector-proto/: Cargo.toml  build.rs
crates/lector-proto/src/: lib.rs
crates/lector-tests/: Cargo.toml
crates/lector-tests/tests/: cascade_tests.rs  integration_tests.rs  proto_tests.rs  topology_tests.rs  transport_tests.rs
crates/lector-tests/tests/common/: mod.rs
crates/lector-topology/: Cargo.toml
crates/lector-topology/src/: tree.rs
crates/lector-transport/: Cargo.toml
crates/lector-transport/src/: cascade.rs  certs.rs  lib.rs  receiver.rs  sender.rs
crates/lector-ui/: Cargo.toml  build.rs
crates/lector-ui/src/: app_state.rs  discovery.rs  main.rs  monitor.rs  orchestrator.rs
crates/lector-ui/ui/: main.slint  theme.slint
crates/lector-ui/ui/components/: file_panel.slint  peer_card.slint  status_bar.slint  toolbar.slint
crates/lectord/: Cargo.toml
crates/lectord/src/: grpc_server.rs  heartbeat.rs  main.rs  service.rs  state.rs  transfer.rs
proto/: lector.proto
