[workspace]
resolver = "2"
members = [
    "crates/lector-proto",
    "crates/lector-transport",
    "crates/lector-topology",
    "crates/lectord",
    "crates/lector-ui",
    "crates/lector-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tonic = "0.14.6"
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.11.0"
rcgen = "0.14.8"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
dashmap = "6"
